--- a/04,01 First/MainWindow.xaml
+++ b/04,01 First/MainWindow.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_04_01_First"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="500" Width="800"
+        ResizeMode="NoResize"
+        >
     <Window.Resources>
         <Style TargetType="Button" x:Key="BS">
             <Setter Property="FontSize" Value="21"></Setter>
-            <Setter Property="Margin" Value="60,5"></Setter>
+            <Setter Property="Margin" Value="20,0"></Setter>
             <Setter Property="Background" Value="DimGray"></Setter>
             <Setter Property="Foreground" Value="White"></Setter>
         </Style>
@@ -22,7 +24,7 @@
         <Style TargetType="TextBlock" x:Key="TBS">
             <Setter Property="TextAlignment" Value="Center"></Setter>
             <Setter Property="FontSize" Value="20"></Setter>
-            <Setter Property="Margin" Value="60,10,60,0"></Setter>
+            <Setter Property="Margin" Value="0,10,0,0"></Setter>
             <Setter Property="Background" Value="DimGray"></Setter>
             <Setter Property="Foreground" Value="White"></Setter>
         </Style>
@@ -34,23 +36,40 @@
         </Grid.ColumnDefinitions>
         <Border Background="Beige" 
                 Grid.Column="0" >
+            <Border Background="DimGray" Margin="40,10,40,0"
+                    CornerRadius="15"
+                    >
             <StackPanel >
 
-                <Button Style="{StaticResource BS}" Margin="40,10,40,0">Add</Button>
+                    <TextBlock Style="{StaticResource TBS}"
+                               Background="Gray"
+                               Margin="0,15,0,0"
+                               Height="30"
+                               TextAlignment="Center"
+                               
+                               >Simple DataBase UI
+                    </TextBlock>
                 <TextBlock Style="{StaticResource TBS}">Author</TextBlock>
-                <TextBox Style="{StaticResource TS}" x:Name="Author_ComboBox"></TextBox>
+                <TextBox Style="{StaticResource TS}" x:Name="TB_Author"></TextBox>
                 <TextBlock Style="{StaticResource TBS}">Book</TextBlock>
-                <TextBox Style="{StaticResource TS}" x:Name="Book_ComboBox"></TextBox>
+                <TextBox Style="{StaticResource TS}" x:Name="TB_Book"></TextBox>
                 <TextBlock Style="{StaticResource TBS}">Count Page</TextBlock>
-                <TextBox Style="{StaticResource TS}" x:Name="CountPage_ComboBox"></TextBox>
+                <TextBox Style="{StaticResource TS}" x:Name="TB_CountPage"></TextBox>
+                <Button Style="{StaticResource BS}" Margin="0,10,0,0"
+                        BorderBrush="Gray"
+                        Click="AddButton_Click"
+                        >Add</Button>
 
-                <TextBlock Style="{StaticResource TBS}" Margin="40,10,40,20">></TextBlock>
+                <TextBlock x:Name="TB_Status" Style="{StaticResource TBS}" Margin="0,10,0,0">></TextBlock>
 
                 <Button Style="{StaticResource BS}" Click="CreateButton_Click">Create</Button>
                 <Button Style="{StaticResource BS}" Click="ConnectButton_Click">Connect</Button>
                 <Button Style="{StaticResource BS}" Click="ReadAllButton_Click">ReadAll</Button>
             </StackPanel>
+            </Border>
         </Border>
-        <TabPanel Grid.Column="1"></TabPanel>
+        <DataGrid Grid.Column="1"
+                 x:Name="dbView" 
+                  ></DataGrid>
     </Grid>
 </Window>
