--- a/Simple_dataBase_UI Individual/Resources/Styles/TextBlock.xaml
+++ b/Simple_dataBase_UI Individual/Resources/Styles/TextBlock.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="clr-namespace:Simple_dataBase_UI_Individual.Resources.StyleProperties">
     
 </ResourceDictionary>
