--- a/Simple_dataBase_UI Individual/Views/MainWindow.xaml
+++ b/Simple_dataBase_UI Individual/Views/MainWindow.xaml
@@ -22,7 +22,7 @@
         </Grid.ColumnDefinitions>
 
         <ListBox ItemsSource="{Binding Tables}" 
-                 SelectedItem="{Binding SelectedItem}">
+                 SelectedItem="{Binding SelectedTable}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction Command="{Binding SelectionTableCommand}"></i:InvokeCommandAction>
