--- a/Simple_dataBase_UI Individual/Views/MainWindow.xaml
+++ b/Simple_dataBase_UI Individual/Views/MainWindow.xaml
@@ -11,13 +11,13 @@
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
-    <Grid>
+    <Grid Grid.RowSpan="1" Grid.Row="1" Grid.ColumnSpan="2">
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
@@ -44,6 +44,5 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </DataGrid>
-        
     </Grid>
 </Window>
