--- a/Simple_dataBase_UI Individual/App.xaml
+++ b/Simple_dataBase_UI Individual/App.xaml
@@ -6,9 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/Styles/TextBlock.xaml"/>
-                <ResourceDictionary Source="/Resources/Styles/TextBox.xaml"/>
-                <ResourceDictionary Source="/Resources/Styles/Button.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/Label.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
